project/task11/TestParser.py
# Generated from project/task11/Test.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing import TextIO
import sys




class TestParser(Parser):

    grammarFileName = "Test.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'let'",
        "'is'",
        "'graph'",
        "'='",
        "'remove'",
        "'vertex'",
        "'edge'",
        "'vertices'",
        "'from'",
        "'add'",
        "'to'",
        "'['",
        "','",
        "']'",
        "'('",
        "')'",
        "'|'",
        "'^'",
        "'.'",
        "'&'",
        "'..'",
        "'return'",
        "'where'",
        "'reachable'",
        "'in'",
        "'by'",
        "'for'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "WS",
        "VAR",
        "NUM",
        "CHAR",
    ]

    RULE_prog = 0
    RULE_stmt = 1
    RULE_declare = 2
    RULE_bind = 3
    RULE_remove = 4
    RULE_add = 5
    RULE_expr = 6
    RULE_set_expr = 7
    RULE_edge_expr = 8
    RULE_regexp = 9
    RULE_range_expr = 10
    RULE_select = 11
    RULE_v_filter = 12

    ruleNames = [
        "prog",
        "stmt",
        "declare",
        "bind",
        "remove",
        "add",
        "expr",
        "set_expr",
        "edge_expr",
        "regexp",
        "range_expr",
        "select",
        "v_filter",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    T__13 = 14
    T__14 = 15
    T__15 = 16
    T__16 = 17
    T__17 = 18
    T__18 = 19
    T__19 = 20
    T__20 = 21
    T__21 = 22
    T__22 = 23
    T__23 = 24
    T__24 = 25
    T__25 = 26
    T__26 = 27
    WS = 28
    VAR = 29
    NUM = 30
    CHAR = 31

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class ProgContext(ParserRuleContext):

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TestParser.EOF, 0)

        def stmt(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TestParser.StmtContext)
            else:
                return self.getTypedRuleContext(TestParser.StmtContext, i)

        def getRuleIndex(self):
            return TestParser.RULE_prog

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterProg"):
                listener.enterProg(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitProg"):
                listener.exitProg(self)

    def prog(self):

        localctx = TestParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and (
                (1 << _la)
                & (
                    (1 << TestParser.T__0)
                    | (1 << TestParser.T__4)
                    | (1 << TestParser.T__9)
                )
            ) != 0:
                self.state = 26
                self.stmt()
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 32
            self.match(TestParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declare(self):
            return self.getTypedRuleContext(TestParser.DeclareContext, 0)

        def bind(self):
            return self.getTypedRuleContext(TestParser.BindContext, 0)

        def add(self):
            return self.getTypedRuleContext(TestParser.AddContext, 0)

        def remove(self):
            return self.getTypedRuleContext(TestParser.RemoveContext, 0)

        def getRuleIndex(self):
            return TestParser.RULE_stmt

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStmt"):
                listener.enterStmt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStmt"):
                listener.exitStmt(self)

    def stmt(self):

        localctx = TestParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 38
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 1, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.declare()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 35
                self.bind()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 36
                self.add()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 37
                self.remove()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclareContext(ParserRuleContext):

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(TestParser.VAR, 0)

        def getRuleIndex(self):
            return TestParser.RULE_declare

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDeclare"):
                listener.enterDeclare(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDeclare"):
                listener.exitDeclare(self)

    def declare(self):

        localctx = TestParser.DeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(TestParser.T__0)
            self.state = 41
            self.match(TestParser.VAR)
            self.state = 42
            self.match(TestParser.T__1)
            self.state = 43
            self.match(TestParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BindContext(ParserRuleContext):

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(TestParser.VAR, 0)

        def expr(self):
            return self.getTypedRuleContext(TestParser.ExprContext, 0)

        def getRuleIndex(self):
            return TestParser.RULE_bind

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBind"):
                listener.enterBind(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBind"):
                listener.exitBind(self)

    def bind(self):

        localctx = TestParser.BindContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bind)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(TestParser.T__0)
            self.state = 46
            self.match(TestParser.VAR)
            self.state = 47
            self.match(TestParser.T__3)
            self.state = 48
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RemoveContext(ParserRuleContext):

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(TestParser.ExprContext, 0)

        def VAR(self):
            return self.getToken(TestParser.VAR, 0)

        def getRuleIndex(self):
            return TestParser.RULE_remove

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRemove"):
                listener.enterRemove(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRemove"):
                listener.exitRemove(self)

    def remove(self):

        localctx = TestParser.RemoveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_remove)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(TestParser.T__4)
            self.state = 51
            _la = self._input.LA(1)
            if not (
                (
                    ((_la) & ~0x3F) == 0
                    and (
                        (1 << _la)
                        & (
                            (1 << TestParser.T__5)
                            | (1 << TestParser.T__6)
                            | (1 << TestParser.T__7)
                        )
                    )
                    != 0
                )
            ):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 52
            self.expr()
            self.state = 53
            self.match(TestParser.T__8)
            self.state = 54
            self.match(TestParser.VAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AddContext(ParserRuleContext):

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(TestParser.ExprContext, 0)

        def VAR(self):
            return self.getToken(TestParser.VAR, 0)

        def getRuleIndex(self):
            return TestParser.RULE_add

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAdd"):
                listener.enterAdd(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAdd"):
                listener.exitAdd(self)

    def add(self):

        localctx = TestParser.AddContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_add)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(TestParser.T__9)
            self.state = 57
            _la = self._input.LA(1)
            if not (_la == TestParser.T__5 or _la == TestParser.T__6):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 58
            self.expr()
            self.state = 59
            self.match(TestParser.T__10)
            self.state = 60
            self.match(TestParser.VAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self):
            return self.getToken(TestParser.NUM, 0)

        def CHAR(self):
            return self.getToken(TestParser.CHAR, 0)

        def VAR(self):
            return self.getToken(TestParser.VAR, 0)

        def edge_expr(self):
            return self.getTypedRuleContext(TestParser.Edge_exprContext, 0)

        def set_expr(self):
            return self.getTypedRuleContext(TestParser.Set_exprContext, 0)

        def regexp(self):
            return self.getTypedRuleContext(TestParser.RegexpContext, 0)

        def select(self):
            return self.getTypedRuleContext(TestParser.SelectContext, 0)

        def getRuleIndex(self):
            return TestParser.RULE_expr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterExpr"):
                listener.enterExpr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitExpr"):
                listener.exitExpr(self)

    def expr(self):

        localctx = TestParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expr)
        try:
            self.state = 69
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 2, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.match(TestParser.NUM)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.match(TestParser.CHAR)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.match(TestParser.VAR)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 65
                self.edge_expr()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 66
                self.set_expr()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 67
                self.regexp(0)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 68
                self.select()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Set_exprContext(ParserRuleContext):

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TestParser.ExprContext)
            else:
                return self.getTypedRuleContext(TestParser.ExprContext, i)

        def getRuleIndex(self):
            return TestParser.RULE_set_expr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSet_expr"):
                listener.enterSet_expr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSet_expr"):
                listener.exitSet_expr(self)

    def set_expr(self):

        localctx = TestParser.Set_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_set_expr)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(TestParser.T__11)
            self.state = 72
            self.expr()
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == TestParser.T__12:
                self.state = 73
                self.match(TestParser.T__12)
                self.state = 74
                self.expr()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self.match(TestParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Edge_exprContext(ParserRuleContext):

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TestParser.ExprContext)
            else:
                return self.getTypedRuleContext(TestParser.ExprContext, i)

        def getRuleIndex(self):
            return TestParser.RULE_edge_expr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterEdge_expr"):
                listener.enterEdge_expr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitEdge_expr"):
                listener.exitEdge_expr(self)

    def edge_expr(self):

        localctx = TestParser.Edge_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_edge_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(TestParser.T__14)
            self.state = 83
            self.expr()
            self.state = 84
            self.match(TestParser.T__12)
            self.state = 85
            self.expr()
            self.state = 86
            self.match(TestParser.T__12)
            self.state = 87
            self.expr()
            self.state = 88
            self.match(TestParser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RegexpContext(ParserRuleContext):

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CHAR(self):
            return self.getToken(TestParser.CHAR, 0)

        def VAR(self):
            return self.getToken(TestParser.VAR, 0)

        def regexp(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TestParser.RegexpContext)
            else:
                return self.getTypedRuleContext(TestParser.RegexpContext, i)

        def range_expr(self):
            return self.getTypedRuleContext(TestParser.Range_exprContext, 0)

        def getRuleIndex(self):
            return TestParser.RULE_regexp

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRegexp"):
                listener.enterRegexp(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRegexp"):
                listener.exitRegexp(self)

    def regexp(self, _p: int = 0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = TestParser.RegexpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_regexp, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TestParser.CHAR]:
                self.state = 91
                self.match(TestParser.CHAR)
                pass
            elif token in [TestParser.VAR]:
                self.state = 92
                self.match(TestParser.VAR)
                pass
            elif token in [TestParser.T__14]:
                self.state = 93
                self.match(TestParser.T__14)
                self.state = 94
                self.regexp(0)
                self.state = 95
                self.match(TestParser.T__15)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 113
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 6, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 111
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input, 5, self._ctx)
                    if la_ == 1:
                        localctx = TestParser.RegexpContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_regexp
                        )
                        self.state = 99
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 4)"
                            )
                        self.state = 100
                        self.match(TestParser.T__16)
                        self.state = 101
                        self.regexp(5)
                        pass

                    elif la_ == 2:
                        localctx = TestParser.RegexpContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_regexp
                        )
                        self.state = 102
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 2)"
                            )
                        self.state = 103
                        self.match(TestParser.T__18)
                        self.state = 104
                        self.regexp(3)
                        pass

                    elif la_ == 3:
                        localctx = TestParser.RegexpContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_regexp
                        )
                        self.state = 105
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 1)"
                            )
                        self.state = 106
                        self.match(TestParser.T__19)
                        self.state = 107
                        self.regexp(2)
                        pass

                    elif la_ == 4:
                        localctx = TestParser.RegexpContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_regexp
                        )
                        self.state = 108
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 3)"
                            )
                        self.state = 109
                        self.match(TestParser.T__17)
                        self.state = 110
                        self.range_expr()
                        pass

                self.state = 115
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 6, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Range_exprContext(ParserRuleContext):

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self, i: int = None):
            if i is None:
                return self.getTokens(TestParser.NUM)
            else:
                return self.getToken(TestParser.NUM, i)

        def getRuleIndex(self):
            return TestParser.RULE_range_expr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRange_expr"):
                listener.enterRange_expr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRange_expr"):
                listener.exitRange_expr(self)

    def range_expr(self):

        localctx = TestParser.Range_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_range_expr)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(TestParser.T__11)
            self.state = 117
            self.match(TestParser.NUM)
            self.state = 118
            self.match(TestParser.T__20)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == TestParser.NUM:
                self.state = 119
                self.match(TestParser.NUM)

            self.state = 122
            self.match(TestParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SelectContext(ParserRuleContext):

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self, i: int = None):
            if i is None:
                return self.getTokens(TestParser.VAR)
            else:
                return self.getToken(TestParser.VAR, i)

        def expr(self):
            return self.getTypedRuleContext(TestParser.ExprContext, 0)

        def v_filter(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TestParser.V_filterContext)
            else:
                return self.getTypedRuleContext(TestParser.V_filterContext, i)

        def getRuleIndex(self):
            return TestParser.RULE_select

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSelect"):
                listener.enterSelect(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSelect"):
                listener.exitSelect(self)

    def select(self):

        localctx = TestParser.SelectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_select)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 8, self._ctx)
            if la_ == 1:
                self.state = 124
                self.v_filter()

            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == TestParser.T__26:
                self.state = 127
                self.v_filter()

            self.state = 130
            self.match(TestParser.T__21)
            self.state = 131
            self.match(TestParser.VAR)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == TestParser.T__12:
                self.state = 132
                self.match(TestParser.T__12)
                self.state = 133
                self.match(TestParser.VAR)

            self.state = 136
            self.match(TestParser.T__22)
            self.state = 137
            self.match(TestParser.VAR)
            self.state = 138
            self.match(TestParser.T__23)
            self.state = 139
            self.match(TestParser.T__8)
            self.state = 140
            self.match(TestParser.VAR)
            self.state = 141
            self.match(TestParser.T__24)
            self.state = 142
            self.match(TestParser.VAR)
            self.state = 143
            self.match(TestParser.T__25)
            self.state = 144
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class V_filterContext(ParserRuleContext):

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(TestParser.VAR, 0)

        def expr(self):
            return self.getTypedRuleContext(TestParser.ExprContext, 0)

        def getRuleIndex(self):
            return TestParser.RULE_v_filter

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterV_filter"):
                listener.enterV_filter(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitV_filter"):
                listener.exitV_filter(self)

    def v_filter(self):

        localctx = TestParser.V_filterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_v_filter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(TestParser.T__26)
            self.state = 147
            self.match(TestParser.VAR)
            self.state = 148
            self.match(TestParser.T__24)
            self.state = 149
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    def sempred(self, localctx: RuleContext, ruleIndex: int, predIndex: int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[9] = self.regexp_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def regexp_sempred(self, localctx: RegexpContext, predIndex: int):
        if predIndex == 0:
            return self.precpred(self._ctx, 4)

        if predIndex == 1:
            return self.precpred(self._ctx, 2)

        if predIndex == 2:
            return self.precpred(self._ctx, 1)

        if predIndex == 3:
            return self.precpred(self._ctx, 3)
